REGRESSION (r101575): Chinese input is broken when composing mail in iCloud using Safari. https://bugs.webkit.org/show_bug.cgi?id=85840 <rdar://problem/11115520>

Reviewed by Alexey Proskuryakov.

The revision that broke this, introduced a way to sanitize the markup when deleting a range selection.
iCloud listens for DOM modification events and clears the selection, altering the input method state.
The fix consists in adding a paramenter to DeleteSelectionCommand to control when we sanitize the
markup.

* editing/CompositeEditCommand.cpp:
(WebCore::CompositeEditCommand::deleteSelection):
* editing/CompositeEditCommand.h:
* editing/DeleteSelectionCommand.cpp:
(WebCore::DeleteSelectionCommand::DeleteSelectionCommand):
(WebCore::DeleteSelectionCommand::doApply):
* editing/DeleteSelectionCommand.h:
(WebCore::DeleteSelectionCommand::create):
* editing/InsertTextCommand.cpp:
(WebCore::InsertTextCommand::doApply):



Canonical link: https://commits.webkit.org/103425@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@116368 268f45cc-cd09-0410-ab3c-d52691b4dbfc